Improved basic structure

--- a/index.html
+++ b/index.html
@@ -26,60 +26,45 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Link</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Контакты <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Как проехать</a></li>
-                <li><a href="#">Контакты</a></li>
-                <li class="divider"></li>
-                <li><a href="#">Свяжитесь с нами</a></li>
-              </ul>
-            </li>
+            <li><a href="#about">О Компании</a></li>
+            <li><a href="#offer">Что мы предлагаем</a></li>
           </ul>
         </div>
       </div>
     </nav>
+
     <header class="container-fluid">
       <div class="container">
         <div class="logo"></div>
-        <h1 class="title">Орех</h1>
+        <h1 class="title text-center text-uppercase">Покупайте наши Орехи!</h1>
+        <hr class="white intro"/>
+        <p class="intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam ut non sed, dolores, distinctio reprehenderit aut ipsa, sequi alias placeat officia rem minima, nobis soluta assumenda recusandae architecto vitae sunt adipisci. Possimus delectus hic repudiandae similique atque quisquam tempore corrupti odio cum perferendis itaque amet laboriosam, minima mollitia quibusdam! Sunt id reprehenderit dolores excepturi tenetur tempora, odio consequuntur laboriosam fugit aspernatur dolor vitae illum, rerum est? Porro voluptas, fugit voluptatum maxime modi esse ea natus consectetur quae culpa iusto, blanditiis.</p>
       </div>
     </header>
-    <div class="blocky container-fluid">
+
+    <div class="blocky container-fluid about" id="about">
+      <div class="bg"></div>
       <div class="container">
-        <h1>Заголовок</h1>
+        <h1>О Компании</h1>
         <hr>
         <div></div>
       </div>
     </div>
-    <div class="blocky container-fluid">
+
+    <div class="blocky container-fluid offer" id="offer">
       <div class="container">
-        <h1>Заголовок</h1>
+        <h1>Что мы предлагаем</h1>
         <hr>
         <div></div>
       </div>
     </div>
-    <div class="blocky container-fluid">
-      <div class="container">
-        <h1>Заголовок</h1>
-        <hr>
-        <div></div>
-      </div>
-    </div>
-    <div class="blocky container-fluid">
-      <div class="container">
-        <h1>Заголовок</h1>
-        <hr>
-        <div></div>
-      </div>
-    </div>
+
     <footer class="conatainer-fluid">
     </footer>
 
     <!---Scripts--->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/scroll.js"></script>
   </body>
 </html>
